[tool.poetry]
name = "ml-tape"
version = "0.1.0"
description = "Machine Learning Made Simpler"
authors = ["Justin Sybrandt"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
