[tool.poetry]
name = "ml-tape"
version = "0.1.0"
description = "Machine Learning Made Simpler"
authors = ["Justin Sybrandt <justin@sybrandt.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/JSybrandt/ml-tape"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
isort = "^5.11.4"
pytest = "^7.2.0"
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
